Make STATUSES_BY_CODE init lazy
This change dlegates STATUSES_BY_CODE map to nested holder class. That
class will be loaded on first access and that static map will not be
constructed unless it was ever accessed.